sidebar file name wrap fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@ ul {
   display: flex;
   align-items: center;
   gap: 11px;
+  margin-right: 20px;
 }
 
 .sb-doc-wr:hover {
@@ -73,6 +74,9 @@ ul {
   flex-direction: column;
   gap: 5px;
   margin-bottom: 30px;
+  word-wrap: break-word; /* This property ensures that long words will break and wrap onto the next line */
+  overflow-wrap: break-word; /* This is the standard name for the property, while word-wrap is an older name (for compatibility) */
+  max-width: 100%;
 }
 
 .sb-theme-wr {
@@ -82,6 +86,11 @@ ul {
   gap: 12px;
 }
 
+.sb-doc-name {
+  word-wrap: break-word; /* This property ensures that long words will break and wrap onto the next line */
+  overflow-wrap: break-word; /* This is the standard name for the property, while word-wrap is an older name (for compatibility) */
+  max-width: 100%;
+}
 
 /* Header */
 
